# Thoth

./: .env.example  .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yml
config/: default.toml
src/: lib.rs  main.rs
src/core/: inference.rs  mod.rs
src/security/: ast_parser.rs  guardrails.rs  mod.rs
src/sys/: executor.rs  mod.rs  profiler.rs
